--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -83,10 +83,71 @@ a {
 				nav {
 					display: none;
 				}
-				.busket {
-					padding:15px;
-					text-align: right;
-				}
+				.nav_mob {
+					width:100%;
+					display: flex;
+					justify-content: space-between;
+					align-items:center;
+						.busket {
+							padding:15px;
+							text-align: left;
+						}
+						.navToggle {
+								text-align: right;
+							    cursor: pointer;
+							    background: #000000;
+							    box-sizing: border-box;
+							    background-clip: content-box;
+							    width: 30px;
+							    height: 24px;
+							    border-top: 11px solid transparent;
+							    border-bottom: 11px solid transparent;
+							    -webkit-transform: rotate(0deg);
+							    transform: rotate(0deg);
+							    -webkit-transition: all 0.25s ease-in-out;
+							    transition: all 0.25s ease-in-out;
+							    z-index: 10;
+							    margin: 0 10px 0 0;
+							    &:before,
+							    &:after {
+							        content: "";
+							        position: absolute;
+							        background: #000000;
+							        height: 2px;
+							        width: 100%;
+							        right: 0;
+							        will-change: rotate;
+							        -webkit-transform: rotate(0deg);
+							        transform: rotate(0deg);
+							        -webkit-transition: all 0.5s ease;
+							        transition: all 0.5s ease;
+							    }
+							    &:before {
+							        top: -10px;
+							    }
+							    &:after {
+							        bottom: -10px;
+							    }
+							    &.active {
+							        background: transparent;
+							        background-clip: content-box;
+							    }
+							    &.active:before {
+							        -webkit-transform: rotate(135deg);
+							        transform: rotate(135deg);
+							        top: 0;
+							        background: #eee;
+							        width: 110%;
+							    }
+							    &.active:after {
+							        bottom: 0;
+							        -webkit-transform: rotate(-135deg);
+							        transform: rotate(-135deg);
+							        background: #eee;
+							        width: 110%;
+							    }
+						}
+				}				
 			}
 		}
 		main {
@@ -451,8 +512,13 @@ a {
 						}
 					}
 				}
-				.busket {
-					padding:15px;
+				.nav_mov {
+					.busket {
+						padding:15px;
+					}
+					.navToggle {
+						display: none;
+					}
 				}
 			}
 		}
